--- a/HTML + CSS Project/homePage.css
+++ b/HTML + CSS Project/homePage.css
@@ -1,3 +1,19 @@
+@keyframes rise {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+body{
+    opacity: 0;
+    animation: rise 1s ease-out forwards;
+}
+
 * {
     box-sizing: border-box;
 }
@@ -5,7 +21,6 @@
 body {
     padding: 20px;
     margin: 20px;
-    /* background-color: black; */
     background-color: #222;
     color: whitesmoke;
     width: 90vw;
@@ -88,7 +103,6 @@ nav {
     margin-left: 950px;
     margin-top: 20px;
     position: relative;
-    /* top: -35px; */
     width: 515px;
     height: 50px;
     background-color: #222;
